1st Stab at a live site!

--- a/sc-iba/docs.html
+++ b/sc-iba/docs.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <title>SC-IBA WebService API</title>
-<link rel="stylesheet" type="text/css" href="/css/github_markdown.css">
+<link rel="stylesheet" type="text/css" href="/css/gollum_template.css">
 </head>
 <body>
-<div style="padding:20px 100px 20px 20px" class="markdown-body">
+<div class="markdown-body">
 <h1 id="table-of-contents">Table Of Contents</h1>
 <ul>
 <li><a href="#account">Account API</a></li>
