--- a/sc-test/docs.html
+++ b/sc-test/docs.html
@@ -20,12 +20,12 @@
 <h4 id="test-execution">Test Execution</h4>
 <ul>
 <li>Tests are executed sequentially reading tests in each tab and then in each column left to right</li>
-<li>Following execution an HTML output file is created showing the results of the tests which includes:<ul>
-<li>A Global summary showing start and end time and duration of the set of tests executed</li>
-<li>A per test summary giving overall result and duration</li>
-<li>A color coded breakdown of the individual test steps<ul>
+<li>The input file is then copied to produce a colour coded output file showing the results of the tests which includes:<ul>
+<li>A summary sheet showing start and end time and duration of the test execution</li>
+<li>Copies of the original sheets with:<ul>
 <li>Green Cells - have executed successfully</li>
 <li>Red Cells - have failed and caused the remainder of that test to be skipped</li>
+<li>Pale Green - show data captured from the test execution</li>
 </ul>
 </li>
 <li>In addition screenshots of the state of the browser at the time a test failed are provided for analysis </li>
