Fixed further issues with quotes

--- a/sc-test/docs.html
+++ b/sc-test/docs.html
@@ -9,7 +9,7 @@
 <h3 id="sc-test-quick-start-guide">SC-Test - Quick Start Guide</h3>
 <h5 id="version-1-11">Version 1.11</h5>
 <p>Example Test Sheet:</p>
-<p><img src=&quot;example.PNG&quot; ></p>
+<p><img src="example.PNG" ></p>
 <h4 id="the-basics-structure">The Basics - Structure</h4>
 <ul>
 <li>Define your <strong>Tests</strong> in a <strong>Sheet</strong> in an Excel file</li>
@@ -33,7 +33,7 @@
 </li>
 </ul>
 <p>Example Results Sheet </p>
-<p><img src=&quot;example2.PNG&quot; >   </p>
+<p><img src="example2.PNG" >   </p>
 <h4 id="the-basics">The Basics</h4>
 <ul>
 <li><strong>Enabled</strong> The first row always defines whether the test should be run or not allows tests to be commented out easily: [true|false]</li>
@@ -177,7 +177,7 @@
 <li>Locating Attribute Value: Value of the attribute specified in <code>Locating Attribute</code> or the text of the link where text is used as the <code>Location Attribute</code> or <code>-</code> where link text is specifed in Value</li>
 </ul>
 <h5 id="further-examples">Further Examples</h5>
-<p><img src=&quot;links.PNG&quot; ></p>
+<p><img src="links.PNG" ></p>
 <h4 id="working-with-forms">Working with Forms</h4>
 <h5 id="input-fields-">Input fields:</h5>
 <table>
@@ -373,7 +373,7 @@
 <li>Locating Attribute Value: Value of the location attribute</li>
 </ul>
 <h5 id="further-examples">Further Examples</h5>
-<p><img src=&quot;check.PNG&quot; ></p>
+<p><img src="check.PNG" ></p>
 <h4 id="capturing-values-">Capturing values:</h4>
 <p>Captures the value from a web element and write to Results file and or variable for use elsewhere </p>
 <table>
@@ -563,7 +563,7 @@
 <h3 id="timing">Timing</h3>
 <h4 id="recording-timestamps-and-durations">Recording Timestamps and Durations</h4>
 <p>You can add a named timestamps at any point in your test execution. These are written to the output file. In addition you can calculate the difference between two timestamps with the timeDiff test step. See examples below:</p>
-<p><img src=&quot;timestamp.PNG&quot; ></p>
+<p><img src="timestamp.PNG" ></p>
 <h4 id="timestamp">Timestamp</h4>
 <ul>
 <li>Value: -</li>
